--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,11 @@ repos:
     rev: v2.12.2
     hooks:
       - id: pylint
-        exclude: ^.*(docs/).*$
+        exclude: |
+            (?x)^(
+                .*(docs/).*|
+                .*py3_10.py
+            )$
         # disabled import-error as may be run out of environment with deps
         args: ["--disable=import-error"]
         additional_dependencies: ['toml', 'pyproject']
