--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py3.9, py3.10, py3.11
+envlist = py39, py310, py311
 isolated_build = True
 
 [testenv]
@@ -9,3 +9,10 @@ deps = pytest
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest
+
+[testenv:py39]
+deps = pytest
+       pytest-snapshot
+commands =
+    # NOTE: test modules with _py3_10 suffix contain py3.9-incompatible syntax
+    pytest --ignore-glob='*_py3_10.py'
